--- a/app/src/main/res/drawable/custom_progress_bar.xml
+++ b/app/src/main/res/drawable/custom_progress_bar.xml
@@ -4,7 +4,7 @@
     <item android:id="@android:id/secondaryProgress" android:gravity="center_vertical">
         <clip android:gravity="start">
             <shape>
-                <solid android:color="#cccaca"/>
+                <solid android:color="#C8CFD6"/>
                 <size android:height="8dp"/>
                 <corners android:radius="15dp"/>
             </shape>
@@ -14,7 +14,7 @@
     <item android:id="@android:id/progress" android:gravity="center">
         <clip>
             <shape>
-                <solid android:color="#288e58"/>
+                <solid android:color="#2FA07E"/>
                 <size android:height="32dp"/>
                 <corners android:radius="15dp"/>
             </shape>
